dh-make-perl (0.70-1) UNRELEASED; urgency=low

  * dh --buildsystem=buildsystem needs at least debhelper (>= 7.3.7), add this
    rule to DhMakePerl::Command::Packaging. 
  * Bump dh-make-perl version to 0.70.

 -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Wed, 28 Jul 2010 07:07:35 +0200

dh-make-perl (0.69-1) unstable; urgency=low

  [ Damyan Ivanov ]
  * die early if unable to determine distribution name or version.
    Probably Closes: #525847 (already closed due to missing test case)

  [ Ansgar Burchardt ]
  * Do not require --cpan in addition to --pkg-perl when adding Vcs-* fields.
  * Debian::Dependency: Recognize deprecated '<' and '>' relations.
  * Debian::Dependency: Allow architecture restrictions in dependencies.
    For now this information is just ignored.
  * DhMakePerl::Command::Packaging (set_package_name): Use package name
    specified by --packagename option. (Closes: #584619)
  * dh-make-perl: Fix spelling error ("intercepring" → "intercepting").
  * Debian::WNPP::Query: Fix bugs_for_package method.
  * Debian::Control::FromCPAN (discover_dependencies): Do not ignore results
    from Module::Depends::Intrusive. (Closes: #587276)

  [ Salvatore Bonaccorso ]
  * Add support of Breaks field for binary package stanzas in debian/control
    to Debian::Control::Stanza::Binary.
  * Create packages with Standards-Version: 3.9.1.
  * Standards-Version: 3.9.1 (no changes needed).
  * Fix sentences in texts for License stanzas of debian/copyright: Add full
    stop mark after sentences.
  * Add explicit Link to versioned `/usr/share/common-licenses/GPL-1' as this 
    was added by base-files 5.8 (See #436105).
  * Fix debian/copyright text templates in t/dist/Strange-0.1 and
    t/dist/Strange-2.1.
  * Add support for perl_dbi addon for dh.
  * Build-Depends only on perl when Build.PL and Module::Build is used,
    instead of an alternate Build-Depends on perl (>= 5.10) |